[metadata]
name = raise-data
version = 0.0.1


[options]
package_dir =
   raise_data.processors = processors
   raise_data.loaders = loaders
   raise_data.dashboard = dashboard/db


install_requires =
   boto3==1.34.95
   fastavro==1.9.4
   cramjam==2.8.3
   alembic==1.13.1
   psycopg2==2.9.9
   SQLAlchemy==2.0.29


[options.extras_require]
test =
   flake8
   pytest
   pytest-cov
   pytest-mock


[options.entry_points]
console_scripts =
   events-enclave-processor = raise_data.processors.events_enclave_processor:main
   events-dashboard-processor = raise_data.processors.events_dashboard_processor:main
   moodle-dashboard-processor = raise_data.processors.moodle_dashboard_processor:main
   events-loader = raise_data.loaders.events_loader:main
   moodle-loader = raise_data.loaders.moodle_loader:main
   course-content-loader = raise_data.loaders.course_content_loader:main
   course-meta-loader = raise_data.loaders.course_meta_loader:main

[flake8]
exclude =
   dashboard/migrations/versions
